--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div id="app">
     <h1>{{title}}</h1>
 </div>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
     <script src="./main.js"></script>
 </body>
