--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
 <div id="app">
     <h1>{{title}}</h1>
+    <img :src="url" alt="">
 </div>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
